<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/menu_item_monitor"
        android:icon="@drawable/ic_location_on_24px"
        android:title="@string/menu_item_monitor"
        android:checkable="true"/>

    <item
        android:id="@+id/menu_item_camera"
        android:checkable="true"
        android:icon="@drawable/ic_linked_camera_24px"
        android:title="@string/menu_item_camera" />
    <item
        android:id="@+id/menu_item_control"
        android:checkable="true"
        android:icon="@drawable/ic_control_camera_24px"
        android:title="@string/menu_item_control" />
    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:checkable="true"
        />
</menu>